--- a/index.ipynb
+++ b/index.ipynb
@@ -2,6 +2,16 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {
+    "toc": true
+   },
+   "source": [
+    "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#LSTMs-and-GRUs---Lab\" data-toc-modified-id=\"LSTMs-and-GRUs---Lab-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>LSTMs and GRUs - Lab</a></span><ul class=\"toc-item\"><li><span><a href=\"#Introduction\" data-toc-modified-id=\"Introduction-1.1\"><span class=\"toc-item-num\">1.1&nbsp;&nbsp;</span>Introduction</a></span></li><li><span><a href=\"#Objectives\" data-toc-modified-id=\"Objectives-1.2\"><span class=\"toc-item-num\">1.2&nbsp;&nbsp;</span>Objectives</a></span></li><li><span><a href=\"#Getting-Started\" data-toc-modified-id=\"Getting-Started-1.3\"><span class=\"toc-item-num\">1.3&nbsp;&nbsp;</span>Getting Started</a></span></li><li><span><a href=\"#Importing-and-Preprocessing-Our-Text-Data\" data-toc-modified-id=\"Importing-and-Preprocessing-Our-Text-Data-1.4\"><span class=\"toc-item-num\">1.4&nbsp;&nbsp;</span>Importing and Preprocessing Our Text Data</a></span><ul class=\"toc-item\"><li><span><a href=\"#Creating-Sequences-From-Text\" data-toc-modified-id=\"Creating-Sequences-From-Text-1.4.1\"><span class=\"toc-item-num\">1.4.1&nbsp;&nbsp;</span>Creating Sequences From Text</a></span></li></ul></li><li><span><a href=\"#Creating-Our-Models\" data-toc-modified-id=\"Creating-Our-Models-1.5\"><span class=\"toc-item-num\">1.5&nbsp;&nbsp;</span>Creating Our Models</a></span><ul class=\"toc-item\"><li><span><a href=\"#Architectures\" data-toc-modified-id=\"Architectures-1.5.1\"><span class=\"toc-item-num\">1.5.1&nbsp;&nbsp;</span>Architectures</a></span></li><li><span><a href=\"#Compilation-Parameters\" data-toc-modified-id=\"Compilation-Parameters-1.5.2\"><span class=\"toc-item-num\">1.5.2&nbsp;&nbsp;</span>Compilation Parameters</a></span></li><li><span><a href=\"#Inspecting-Our-Compiled-Model\" data-toc-modified-id=\"Inspecting-Our-Compiled-Model-1.5.3\"><span class=\"toc-item-num\">1.5.3&nbsp;&nbsp;</span>Inspecting Our Compiled Model</a></span></li><li><span><a href=\"#Training-Our-Model\" data-toc-modified-id=\"Training-Our-Model-1.5.4\"><span class=\"toc-item-num\">1.5.4&nbsp;&nbsp;</span>Training Our Model</a></span></li><li><span><a href=\"#Building-Our-GRU-Model\" data-toc-modified-id=\"Building-Our-GRU-Model-1.5.5\"><span class=\"toc-item-num\">1.5.5&nbsp;&nbsp;</span>Building Our GRU Model</a></span></li></ul></li><li><span><a href=\"#Summary\" data-toc-modified-id=\"Summary-1.6\"><span class=\"toc-item-num\">1.6&nbsp;&nbsp;</span>Summary</a></span></li></ul></li></ul></div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# LSTMs and GRUs - Lab\n",
@@ -26,7 +36,7 @@
     "\n",
     "In the cell below, import the following items:\n",
     "\n",
-    "* `fetch20_newsgroups`, from `sklearn.datasets`\n",
+    "* `fetch_20newsgroups`, from `sklearn.datasets`\n",
     "* `keras`\n",
     "* from `keras.layers`, import the following layers:\n",
     "    * `LSTM`\n",
@@ -43,10 +53,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.datasets import fetch_20newsgroups\n",
+    "\n",
+    "from keras.layers import LSTM, GRU, Dense, GlobalMaxPool1D, Embedding, Dropout\n",
+    "from keras.models import Sequential\n",
+    "from keras.preprocessing import text, sequence\n",
+    "from keras.utils import to_categorical\n",
+    "\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "np.random.seed(0)\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "%matplotlib inline"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -67,11 +91,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "newsgroups = None"
+    "newsgroups = fetch_20newsgroups()"
    ]
   },
   {
@@ -85,12 +109,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = None\n",
-    "labels = None"
+    "data = newsgroups.data\n",
+    "labels = newsgroups.target"
    ]
   },
   {
@@ -104,11 +128,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "labels = None"
+    "labels = to_categorical(labels, 20)"
    ]
   },
   {
@@ -131,14 +155,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "tokenizer = None\n",
-    "\n",
-    "list_tokenized_train = None\n",
-    "X_t = None"
+    "tokenizer = text.Tokenizer(num_words=20000)\n",
+    "tokenizer.fit_on_texts(list(data))\n",
+    "list_tokenized_train = tokenizer.texts_to_sequences(data)\n",
+    "X_t = sequence.pad_sequences(list_tokenized_train, maxlen=100)"
    ]
   },
   {
@@ -170,13 +194,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "# LSTM Model\n",
     "\n",
-    "lstm_model = None\n"
+    "lstm_model = Sequential([\n",
+    "    Embedding(20000, 128),\n",
+    "    LSTM(50, return_sequences=True),\n",
+    "    GlobalMaxPool1D(),\n",
+    "    Dropout(0.5),\n",
+    "    Dense(50, activation='relu'),\n",
+    "    Dropout(0.5),\n",
+    "    Dense(20, activation='softmax')\n",
+    "])\n"
    ]
   },
   {
@@ -196,10 +228,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "lstm_model.compile(loss='categorical_crossentropy', optimizer='adam', metrics=['accuracy'])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -212,10 +246,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "embedding_1 (Embedding)      (None, None, 128)         2560000   \n",
+      "_________________________________________________________________\n",
+      "lstm_1 (LSTM)                (None, None, 50)          35800     \n",
+      "_________________________________________________________________\n",
+      "global_max_pooling1d_1 (Glob (None, 50)                0         \n",
+      "_________________________________________________________________\n",
+      "dropout_1 (Dropout)          (None, 50)                0         \n",
+      "_________________________________________________________________\n",
+      "dense_1 (Dense)              (None, 50)                2550      \n",
+      "_________________________________________________________________\n",
+      "dropout_2 (Dropout)          (None, 50)                0         \n",
+      "_________________________________________________________________\n",
+      "dense_2 (Dense)              (None, 20)                1020      \n",
+      "=================================================================\n",
+      "Total params: 2,599,370\n",
+      "Trainable params: 2,599,370\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "lstm_model.summary()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -240,10 +304,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train on 10182 samples, validate on 1132 samples\n",
+      "Epoch 1/2\n",
+      "10182/10182 [==============================] - 38s 4ms/step - loss: 2.9247 - acc: 0.0785 - val_loss: 2.6065 - val_acc: 0.2014\n",
+      "Epoch 2/2\n",
+      "10182/10182 [==============================] - 36s 4ms/step - loss: 2.3645 - acc: 0.2181 - val_loss: 1.8204 - val_acc: 0.4859\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.callbacks.History at 0x1a2d5fdb70>"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lstm_model.fit(X_t, labels, epochs=2, batch_size=32, validation_split=0.1)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -258,13 +346,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "# GRU Model\n",
     "\n",
-    "gru_model = None\n"
+    "gru_model = Sequential([\n",
+    "    Embedding(20000, 128),\n",
+    "    LSTM(50, return_sequences=True),\n",
+    "    GlobalMaxPool1D(),\n",
+    "    Dropout(0.5),\n",
+    "    Dense(50, activation='relu'),\n",
+    "    Dropout(0.5),\n",
+    "    Dense(20, activation='softmax')\n",
+    "])\n"
    ]
   },
   {
@@ -276,10 +372,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "gru_model.compile(loss='categorical_crossentropy', optimizer='adam', metrics=['accuracy'])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -290,10 +388,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "embedding_2 (Embedding)      (None, None, 128)         2560000   \n",
+      "_________________________________________________________________\n",
+      "lstm_2 (LSTM)                (None, None, 50)          35800     \n",
+      "_________________________________________________________________\n",
+      "global_max_pooling1d_2 (Glob (None, 50)                0         \n",
+      "_________________________________________________________________\n",
+      "dropout_3 (Dropout)          (None, 50)                0         \n",
+      "_________________________________________________________________\n",
+      "dense_3 (Dense)              (None, 50)                2550      \n",
+      "_________________________________________________________________\n",
+      "dropout_4 (Dropout)          (None, 50)                0         \n",
+      "_________________________________________________________________\n",
+      "dense_4 (Dense)              (None, 20)                1020      \n",
+      "=================================================================\n",
+      "Total params: 2,599,370\n",
+      "Trainable params: 2,599,370\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "gru_model.summary()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -304,10 +432,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train on 10182 samples, validate on 1132 samples\n",
+      "Epoch 1/2\n",
+      "10182/10182 [==============================] - 36s 4ms/step - loss: 2.8961 - acc: 0.0979 - val_loss: 2.4598 - val_acc: 0.2580\n",
+      "Epoch 2/2\n",
+      "10182/10182 [==============================] - 36s 4ms/step - loss: 2.1838 - acc: 0.2755 - val_loss: 1.6924 - val_acc: 0.4435\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.callbacks.History at 0x1a31584e48>"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gru_model.fit(X_t, labels, epochs=2, batch_size=32, validation_split=0.1)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -337,7 +489,20 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": true,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
